--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Hello. My first web programming project!</title>
   </head>
   <body>
-    yello.
+    <<h1>Hello. My first web programming project!</h1>
   </body>
 </html>
