--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
         <title>Search</title>
 
         <style media="screen">
-          #input {
+          .input {
             height: 35px;
             font-size: 18px;
             border-radius: 25px;
@@ -20,7 +20,7 @@
     </head>
     <body>
         <form action="https://google.com/images" class="center">
-            <input type="text" name="q" size="60" id="input"></br>
+            <input type="text" name="q" size="60" class="input"></br>
 
             <div id="submitStyle">
               <input type="submit" value="Google Images">
