--- a/index.html
+++ b/index.html
@@ -1,32 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Search</title>
-
-        <style media="screen">
-          #input {
-            height: 45px;
-            font-size: 18px;
-            border-radius: 25px;
-            border-width:1px;
-            border-color: black;
-            padding-left: 20px;
-          }
-
-          #input:focus {
-            outline: none;
-            border-color: #979794;
-          }
-
-          #input:hover {
-            border-color: #979794;
-          }
-
-          #submitStyle {
-            padding-top: 6%;
-            padding-left: 11.8%;
-          }
-        </style>
+        <title>Google Search</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -41,10 +16,14 @@
             <div class="center" id="submitStyle">
               <input type="submit" value="Google Search" class="buttonStyle">
             </div>
+
+            <div class="center" style="padding-left:16.5%; padding-top: 3.35%;">
+              <input type="submit" value="I'm Feeling Lucky" class="feelingLucky" name="btnI">
+            </div>
         </form>
 
-        <div class="topcorner" style="top: 40px"><a href="search.html">Image Search</a></div>
+        <div class="topcorner" style="top: 40px"><a href="search.html" class="link">Image Search</a></div>
       </br>
-        <div class="topcorner"><a href="AdvSearch.html">Advanced Search</a></div>
+        <div class="topcorner"><a href="AdvSearch.html" class="link">Advanced Search</a></div>
     </body>
 </html>
